# tpl-fastapi

./: cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  .skjoldignore  Dockerfile  Makefile  pyproject.toml
{{ cookiecutter.project_slug }}/docs/payloads/: auth-admin-user.json  auth-common-user.json
{{ cookiecutter.project_slug }}/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
{{ cookiecutter.project_slug }}/scripts/: image-clear.sh
{{ cookiecutter.project_slug }}/tests/unit/: conftest.py  test_auth.py  test_broker.py  test_emmiter.py  test_life.py
{{ cookiecutter.project_slug }}/tests/unit/routes/: conftest.py  test_auth.py  test_probe.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module}}/: __init__.py  auth.py  broker.py  config.py  db.py  emmiter.py  life.py  logger.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module}}/helpers/: __init__.py  controllers.py  datatypes.py  models.py  paginate.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module}}/middlewares/: __init__.py  request_id.py  took.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module}}/routes/: __init__.py  auth.py  probe.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module}}/routes/probe/: __init__.py  probes.py
